Implements events love/hate/delete moving and deleting files WIP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="library">Library</string>
     <string name="sampler">Sampler</string>
     <string name="sharing">Sharing</string>
+    <string name="flame">Flame</string>
 </resources>
