--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="buddies">Buddies</string>
     <string name="play_pause_button">Play/Pause Button</string>
     <string name="library">Library</string>
-    <string name="sampler">Sampler</string>
+    <string name="sampler">What\'s Hot</string>
     <string name="sharing">Sharing</string>
     <string name="flame">Flame</string>
 </resources>
