--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="sampler">What\'s Hot</string>
     <string name="sharing">Sharing</string>
     <string name="flame">Flame</string>
+    <string name="song_playing">Song Playing</string>
+    <string name="song">Song</string>
+    <string name="artist">Artist</string>
+    <string name="genre">Genre</string>
+    <string name="subtitle">Subtitle</string>
+    <string name="maximize_playing_song">Maximize playing song</string>
 </resources>
