--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="SongNameCantBeEmpty">Song name cannot be empty</string>
     <string name="Synchronizing">Synchronizing</string>
     <string name="SyncLibrary">Sync Library</string>
+    <string name="pause">pause</string>
+    <string name="skip_previous">skip previous</string>
+    <string name="skip_next">skip next</string>
 </resources>
