Bug fix: skip next/previous when shuffled Opens PlayingActivity when click recent list item Bug fix: set image view of draged song on PlaylistActivity Opens ArtistActivity when click album art of playable not playlist

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="shuffle">Shuffle</string>
     <string name="add_to_playlist">Add to Playlist</string>
     <string name="song_subtitle">Song subtitle</string>
+    <string name="remove_song">Remove Song</string>
+    <string name="blue">Blue</string>
 </resources>
