hide sov features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,11 @@
     <string name="blue">Blue</string>
     <string name="clear_search_field">clear search field</string>
     <string name="search">Search</string>
+    <string name="settings">Settings</string>
+    <string name="sharing_warning">IMPORTANT: This player shares the MP3 files in your music folder: /android/.../music Make sure all MP3 files there can be shared.</string>
+    <string name="free_storage">Free storage:</string>
+    <string name="media_storage">Media storage:</string>
+    <string name="sample_free_storage">2.3 GB</string>
+    <string name="sample_media_storage">420 MB</string>
+    <string name="max_volume">Max Volume</string>
 </resources>
