--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="maximize_playing_song">Maximize playing song</string>
     <string name="SongNameCantBeEmpty">Song name cannot be empty</string>
     <string name="Synchronizing">Synchronizing</string>
-    <string name="SyncLibrary">Sync Library</string>
+    <string name="ScanDevice">Scan This Device</string>
     <string name="pause">pause</string>
     <string name="skip_previous">skip previous</string>
     <string name="skip_next">skip next</string>
